Uncomment and adjust OrderControllerTest to some new changes